[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-twitter-client = "0.1.2"
reqwest = { version = "0.13.2", features = ["json", "cookies"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
